<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:navigationIcon="@mipmap/ic_cross"
                app:theme="@style/ToolbarTheme"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/title_new_card_visit"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_action_save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right"
                    android:background="@null"
                    android:text="@string/btn_label_save"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/card_text"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="84dp">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="24dp"
                    android:background="@mipmap/ic_avatar_place_holder" />

                <EditText
                    android:id="@+id/et_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:background="@drawable/input_background"
                    android:elevation="0.5dp"
                    android:hint="@string/textHintDisplayName"
                    android:inputType="textCapWords"
                    android:paddingLeft="12dp"
                    android:paddingTop="11.5dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="11.5dp"
                    android:textColor="@color/colorTextAccent"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/card_text_field"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:background="@drawable/input_background"
                    android:elevation="0.5dp"
                    android:hint="@string/textHintAddress"
                    android:inputType="textCapWords"
                    android:paddingLeft="12dp"
                    android:paddingTop="11.5dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="11.5dp"
                    android:textColor="@color/colorTextNormal"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/card_text_field"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/et_position"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:background="@drawable/input_background"
                    android:elevation="0.5dp"
                    android:hint="@string/textHintPosition"
                    android:inputType="textCapWords"
                    android:paddingLeft="12dp"
                    android:paddingTop="11.5dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="11.5dp"
                    android:textColor="@color/colorTextNormal"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/card_text_field"
                    android:textStyle="normal" />


                <EditText
                    android:id="@+id/et_about"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:background="@drawable/input_background"
                    android:elevation="0.5dp"
                    android:hint="@string/textHintAbout"
                    android:inputType="textCapSentences"
                    android:paddingLeft="12dp"
                    android:paddingTop="11.5dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="11.5dp"
                    android:textColor="@color/colorTextNormal"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/card_text_field"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/et_gender"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:background="@drawable/input_background"
                    android:drawableRight="@mipmap/ic_caret_down"
                    android:elevation="0.5dp"
                    android:focusable="false"
                    android:hint="@string/textHintGender"
                    android:paddingLeft="12dp"
                    android:paddingTop="11.5dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="11.5dp"
                    android:textColor="@color/colorTextNormal"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/card_text_field"
                    android:textStyle="normal" />


                <EditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/input_background"
                    android:drawableRight="@mipmap/ic_calendar"
                    android:elevation="0.5dp"
                    android:focusable="false"
                    android:hint="@string/textHintDOB"
                    android:paddingLeft="12dp"
                    android:paddingTop="11.5dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="11.5dp"
                    android:textColor="@color/colorTextNormal"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/card_text_field"
                    android:textStyle="normal" />

            </LinearLayout>

        </ScrollView>


        <FrameLayout
            android:id="@+id/save_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_save_layout_bg"
            android:paddingTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/selector_btn_save_background"
                android:text="@string/btn_label_save"
                android:textAllCaps="true"
                android:textColor="@color/selector_btn_save_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>