<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="card"
            type="com.anhle.app.cardvisit.service.model.Card" />

    </data>

    <LinearLayout
        android:id="@+id/card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/card_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_radius_corner_28"
            app:loadImageAndRoundCircle="@{card.avatar}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/card_name"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{card.name}"
                android:textColor="@color/colorTextAccent"
                android:textSize="@dimen/card_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{String.format(@string/format_mobile, card.mobile)}"
                android:textColor="@color/colorTextNormal"
                android:textSize="@dimen/card_text_small" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{String.format(@string/format_address, card.address)}"
                android:textColor="@color/colorTextNormal"
                android:textSize="@dimen/card_text_small" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{String.format(@string/format_company, card.company)}"
                android:textColor="@color/colorTextNormal"
                android:textSize="@dimen/card_text_small" />

            <TextView
                android:id="@+id/tv_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{String.format(@string/format_position, card.position)}"
                android:textColor="@color/colorTextNormal"
                android:textSize="@dimen/card_text_small" />

        </LinearLayout>
    </LinearLayout>
</layout>
